- fix sidebar on small screen

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -71,7 +71,7 @@
         }
     }
     #content-menu {
-        height: 70vh;
+        height: 80vh;
         display: flex;
         flex-direction: column;
         background-color: $dark-blue;
@@ -104,7 +104,7 @@
         }
         a {
             width: 100%;
-            height: 30vh;
+            height: 20vh;
             color: $white;
             display: flex;
             flex-direction: column;
@@ -415,9 +415,9 @@
             width: 100%;
             margin: 0 auto;
             li {
-                font-size: 1.5rem;
-                height: 32px;
-                line-height: 32px;
+                font-size: 1.4rem;
+                height: 25px;
+                line-height: 25px;
                 border-radius: 2px;
                 font-weight: 700;
                 padding: 5px;
@@ -435,11 +435,13 @@
                 @media screen and (max-width: $smart-phone) {
                     color: $dark-yellow;
                     background-color: $white;
+                    height: 32px;
+                    line-height: 32px;
                 }
             }
         }
         .text-size {
-            margin-bottom: 35px;
+            margin-bottom: 15px;
             li {
                 width: 25%;
                 margin-right: 15%;
@@ -452,7 +454,7 @@
             }
         }
         .text-translate {
-            margin-bottom: 35px;
+            margin-bottom: 20px;
             justify-content: space-between;
             li {
                 width: 25%;
@@ -479,6 +481,7 @@
             color: #ffffff;
             font-size: 1.4rem;
             letter-spacing: 0px;
+            margin-bottom: 2vh;
             .title {
                 color: #d69709;
             }
